--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- META & SEO -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- STYLE -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <header>
+    <!-- SECTION 1 -->
+    <section>
+      <!-- APP BAR -->
+      <div class="app-bar">
+        <img src="/img/app-bar/allianz-logo.png" alt="">
+        <img src="/img/app-bar/logo-gmw-banner.png" alt="">
+        <img src="/img/app-bar/logo-jenius-white.png" alt="">
+        <img src="/img/app-bar/AL_peduliW.png" alt="">
+      </div>
+    </section>
+  </header>
 </body>
 </html>
