hero section was added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <!-- SECTION 1 -->
-    <section>
+    <section class="section-1">
       <!-- APP BAR -->
       <div class="app-bar">
         <img src="/img/app-bar/allianz-logo.png" alt="">
@@ -20,6 +20,14 @@
         <img src="/img/app-bar/logo-jenius-white.png" alt="">
         <img src="/img/app-bar/AL_peduliW.png" alt="">
       </div>
+      <div class="terminal-bg">
+        <h2 class="green-text">Mind Your Own</h2>
+        <h1 class="light-orange-text">“Business”</h1>
+        <h4 class="green-text">Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!</h4>
+      </div>
+      <img class="sect-1-scroll-img" src="./img/section-1/scroll@2x.png" alt="">
+      <img class="sect-1-left-bot" src="./img/section-1/left-bot-img@2x.png" alt="">
+      <img class="sect-1-right-bot" src="./img/section-1/right-bot-img@2x.png" alt="">
     </section>
   </header>
 </body>
