section 2 part one was added

--- a/index.html
+++ b/index.html
@@ -1,34 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- META & SEO -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <!-- STYLE -->
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <!-- SECTION 1 -->
-    <section class="section-1">
-      <!-- APP BAR -->
-      <div class="app-bar">
-        <img src="/img/app-bar/allianz-logo.png" alt="">
-        <img src="/img/app-bar/logo-gmw-banner.png" alt="">
-        <img src="/img/app-bar/logo-jenius-white.png" alt="">
-        <img src="/img/app-bar/AL_peduliW.png" alt="">
-      </div>
-      <div class="terminal-bg">
-        <h2 class="green-text">Mind Your Own</h2>
-        <h1 class="light-orange-text">“Business”</h1>
-        <h4 class="green-text">Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!</h4>
-      </div>
-      <img class="sect-1-scroll-img" src="./img/section-1/scroll@2x.png" alt="">
-      <img class="sect-1-left-bot" src="./img/section-1/left-bot-img@2x.png" alt="">
-      <img class="sect-1-right-bot" src="./img/section-1/right-bot-img@2x.png" alt="">
-    </section>
-  </header>
-</body>
+  <head>
+    <!-- META & SEO -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- STYLE -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <!-- SECTION 1 -->
+      <section class="section-1">
+        <!-- APP BAR -->
+        <div class="app-bar">
+          <img src="/img/app-bar/allianz-logo.png" alt="" />
+          <img src="/img/app-bar/logo-gmw-banner.png" alt="" />
+          <img src="/img/app-bar/logo-jenius-white.png" alt="" />
+          <img src="/img/app-bar/AL_peduliW.png" alt="" />
+        </div>
+        <div class="terminal-bg">
+          <h2 class="green-text">Mind Your Own</h2>
+          <h1 class="light-orange-text">“Business”</h1>
+          <h4 class="green-text">
+            Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!
+          </h4>
+        </div>
+        <img
+          class="sect-1-scroll-img"
+          src="./img/section-1/scroll@2x.png"
+          alt=""
+        />
+        <img
+          class="sect-1-left-bot"
+          src="./img/section-1/left-bot-img@2x.png"
+          alt=""
+        />
+        <img
+          class="sect-1-right-bot"
+          src="./img/section-1/right-bot-img@2x.png"
+          alt=""
+        />
+      </section>
+      <section class="section-2">
+        <div class="section-2-1">
+          <h2>Pandemi oh Pandemi</h2>
+          <div class="section-2-1-wrapper">
+            <img src="/img/section-2/cloud@2x.png" alt="" class="cloud-md" />
+            <div class="section-2-1-text-box">
+              <p>
+                Enggak terasa sudah satu tahun kita berada di fase asing dengan
+                semua kebiasaan baru ya, girls.
+              </p>
+              <p>
+                Banyak lini kehidupan yang terdampak pandemi COVID-19; termasuk
+                remaja seperti kita juga rentan terkena dampak nyata pandemi,
+                lho. Kok bisa?
+              </p>
+              <div class="cloud-mobile-box">
+                <img
+                  src="/img/section-2/cloud@2x.png"
+                  alt=""
+                  class="cloud-mobile"
+                />
+                <img
+                  src="/img/section-2/cloud@2x.png"
+                  alt=""
+                  class="img-flipped cloud-mobile"
+                />
+              </div>
+              <p>
+                Berdasarkan data dari UNICEF Indonesia, 57% anak menghadapi
+                masalah ekonomi karena pekerjaan orang tua mereka yang terdampak
+                pandemi.
+              </p>
+              <p>
+                Hal ini diperkuat dengan survei CewekBanget.ID pada 1406
+                responden dari Sumatera Utara hingga Nusa Tenggara Timur.
+              </p>
+            </div>
+            <img
+              src="/img/section-2/cloud@2x.png"
+              alt=""
+              class="img-flipped cloud-right cloud-md"
+            />
+          </div>
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
