typography was fixed

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <img src="/img/app-bar/AL_peduliW.png" alt="" />
         </div>
         <div class="terminal-bg">
-          <h2 class="green-text">Mind Your Own</h2>
-          <h1 class="light-orange-text">“Business”</h1>
-          <h4 class="green-text">
-            Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!
-          </h4>
+          <h1>
+            <span class="heading green-text heading-secondary">Mind Your Own</span>
+            <span class="heading light-orange-text heading-primary">“Business”</span>
+            <span class="heading green-text heading-sub">Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!</span>
+          </h1>
         </div>
         <img
           class="sect-1-scroll-img"
@@ -45,7 +45,7 @@
       </section>
       <section class="section-2">
         <div class="section-2-1">
-          <h2>Pandemi oh Pandemi</h2>
+          <h2 class="orange-text heading-secondary">Pandemi oh Pandemi</h2>
           <div class="section-2-1-wrapper">
             <img src="/img/section-2/cloud@2x.png" alt="" class="cloud-md" />
             <div class="section-2-1-text-box">
