map section was added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             />
           </div>
         </div>
+        <div class="section-2-2">
+          <img class="map-img" src="/img/section-2/Map_Indonesia@2x.png" alt="">
+        </div>
       </section>
     </header>
   </body>
