section 2 was added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
         <div class="section-2-2">
           <img class="map-img" src="/img/section-2/Map_Indonesia@2x.png" alt="">
         </div>
+        <div class="section-2-3">
+          <h2 class="orange-text heading-secondary">Dari Total 1046 Responden</h2>
+          <img src="/img/section-2/BAR_1@2x.png" alt="" class="bar-img">
+          <img src="/img/section-2/BAR_2@2x.png" alt="" class="bar-img">
+          <p class="orange-text heading-sub">Kondisi di atas relate banget 
+            dengan kita ya, girls</p>
+        </div>
+        <div class="section-2-4">
+          <img class="chart-img" src="/img/section-2/chart-desktop@2x.png" alt="">
+          <img class="chart-img-mobile" src="/img/section-2/chart-mobile@2x.png" alt="">
+        </div>
       </section>
     </header>
   </body>
