section 3 was added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
           <img class="chart-img-mobile" src="/img/section-2/chart-mobile@2x.png" alt="">
         </div>
       </section>
+      <section class="section-3">
+        <div class="sect-3-1-wrapper">
+          <p class="heading-sub sect-3-1-text">
+            Sayangnya <span class="font-weight-bold">penurunan pendapatan</span> di kelompok tersebut <span class="font-weight-bold">tidak dibarengi dengan pengeluaran yang juga menurun</span>. Kelompok ini justru <span class="font-weight-bold">lebih boros</span> setelah pandemi <span class="font-weight-bold">karena tanggungan</span> yang lebih banyak.
+            <br>
+            <br>
+            Belum lagi <span class="font-weight-bold">melepas penat</span> saat work from home, kelompok <span class="font-weight-bold">pekerja</span> lebih banyak <span class="font-weight-bold">mengeluarkan uang untie jajan kuliner</span> melalui aplikasi di smartphone.
+          </p>
+          <img class="sect-3-1-img" src="/img/section-3/computer-girl.png" alt="">
+        </div>
+        <div class="sect-3-1-wrapper">
+          <img class="sect-3-1-img" src="/img/section-3/coffee-girl.png" alt="">
+          <p class="heading-sub sect-3-1-text">
+            Waduh, kalau mengeluarkan uang terus-menerus bisa jadi kelompok pekerja bisa dikategorikan boros.
+            <br>
+            <br>
+            Secara harafiah <span class="font-weight-bold">menurut KBBI, boros adalah berlebih-lebihan dalam pemakaian uang, barang, dan sebagainya</span>. Artinya, kita cenderung <span class="font-weight-bold">overspending</span> dan mengeluarkan uang <span class="font-weight-bold">lebih banyak dari yang kita miliki</span> atau yang kita butuhkan.
+          </p>
+        </div>
+        <img class="sect-3-card" src="/img/section-3/setya-card.png" alt="" srcset="">
+      </section>
     </header>
   </body>
 </html>
