section 4 was added

--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
         </div>
         <img class="sect-3-card" src="/img/section-3/setya-card.png" alt="" srcset="">
       </section>
+      <section class="section-4 heading-sub">
+        <div class="section-4-content">
+          <p class="heading-sub orange-text">Kenapa Remaja Lebih Boros Saat Pandemi?</p>
+          <p class="sect-4-text">Jonathan End yang merupakan ahli keuangan, menyebutkan ada dua faktor utama yang menyebabkan remaja bisa boros saat pandemi, yaitu rasa <span class="font-weight-bold">bosan</span> dan <span class="font-weight-bold">media sosial</span>.</p>
+          <img class="sect-3-card" src="/img/section-4/card-1@2x.png" alt="" srcset="">
+        <img src="/img/section-4/center-img@2x.png" alt="" class="sect-4-center-img-mobile">
+          <p class="sect-4-text">
+            Sama halnya dengan Jonathan End, psikolong <span class="font-weight-bold">Sarah F Fathoni, M.Psi</span> juga menyebutkan kalau <span class="font-weight-bold">FOMO</span> atau Fear of Missing Out jadi penyebab remaja lebih boros selama pandemi dari sisi psikologis.
+          </p>
+          <img class="sect-3-card" src="/img/section-4/card-2@2x.png" alt="" srcset="">
+          <p class="sect-4-text">Meski sikap boros selama pandemi COVID-19 <span class="font-weight-bold">bisa dipahami, </span> namun ini bukanlah sebuah kebiasaan yang baik!</p>
+          <p class="sect-4-text">Ada jangka pendek dan panjang jika kita terus menerus boros, termasuk <span class="font-weight-bold">membentuk kebiasaan finansial yang buruk.</span></p>
+        </div>
+        <img src="/img/section-4/center-img@2x.png" alt="" class="sect-4-center-img-desktop">
+      </section>
     </header>
   </body>
 </html>
