section 6 was added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
         </div>
         <div class="terminal-bg">
           <h1>
-            <span class="heading green-text heading-secondary">Mind Your Own</span>
-            <span class="heading light-orange-text heading-primary">“Business”</span>
-            <span class="heading green-text heading-sub">Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!</span>
+            <span class="heading green-text heading-secondary"
+              >Mind Your Own</span
+            >
+            <span class="heading light-orange-text heading-primary"
+              >“Business”</span
+            >
+            <span class="heading green-text heading-sub"
+              >Saatnya Evaluasi Diri dan Coba Bisnis Minim Modal!</span
+            >
           </h1>
         </div>
         <img
@@ -43,113 +49,234 @@
           alt=""
         />
       </section>
-      <section class="section-2">
-        <div class="section-2-1">
-          <h2 class="orange-text heading-secondary">Pandemi oh Pandemi</h2>
-          <div class="section-2-1-wrapper">
-            <img src="/img/section-2/cloud@2x.png" alt="" class="cloud-md" />
-            <div class="section-2-1-text-box">
-              <p>
-                Enggak terasa sudah satu tahun kita berada di fase asing dengan
-                semua kebiasaan baru ya, girls.
-              </p>
-              <p>
-                Banyak lini kehidupan yang terdampak pandemi COVID-19; termasuk
-                remaja seperti kita juga rentan terkena dampak nyata pandemi,
-                lho. Kok bisa?
-              </p>
-              <div class="cloud-mobile-box">
-                <img
-                  src="/img/section-2/cloud@2x.png"
-                  alt=""
-                  class="cloud-mobile"
-                />
-                <img
-                  src="/img/section-2/cloud@2x.png"
-                  alt=""
-                  class="img-flipped cloud-mobile"
-                />
-              </div>
-              <p>
-                Berdasarkan data dari UNICEF Indonesia, 57% anak menghadapi
-                masalah ekonomi karena pekerjaan orang tua mereka yang terdampak
-                pandemi.
-              </p>
-              <p>
-                Hal ini diperkuat dengan survei CewekBanget.ID pada 1406
-                responden dari Sumatera Utara hingga Nusa Tenggara Timur.
-              </p>
-            </div>
-            <img
-              src="/img/section-2/cloud@2x.png"
-              alt=""
-              class="img-flipped cloud-right cloud-md"
-            />
-          </div>
-        </div>
-        <div class="section-2-2">
-          <img class="map-img" src="/img/section-2/Map_Indonesia@2x.png" alt="">
-        </div>
-        <div class="section-2-3">
-          <h2 class="orange-text heading-secondary">Dari Total 1046 Responden</h2>
-          <img src="/img/section-2/BAR_1@2x.png" alt="" class="bar-img">
-          <img src="/img/section-2/BAR_2@2x.png" alt="" class="bar-img">
-          <p class="orange-text heading-sub">Kondisi di atas relate banget 
-            dengan kita ya, girls</p>
-        </div>
-        <div class="section-2-4">
-          <img class="chart-img" src="/img/section-2/chart-desktop@2x.png" alt="">
-          <img class="chart-img-mobile" src="/img/section-2/chart-mobile@2x.png" alt="">
-        </div>
-      </section>
-      <section class="section-3">
-        <div class="sect-3-1-wrapper">
-          <p class="heading-sub sect-3-1-text">
-            Sayangnya <span class="font-weight-bold">penurunan pendapatan</span> di kelompok tersebut <span class="font-weight-bold">tidak dibarengi dengan pengeluaran yang juga menurun</span>. Kelompok ini justru <span class="font-weight-bold">lebih boros</span> setelah pandemi <span class="font-weight-bold">karena tanggungan</span> yang lebih banyak.
-            <br>
-            <br>
-            Belum lagi <span class="font-weight-bold">melepas penat</span> saat work from home, kelompok <span class="font-weight-bold">pekerja</span> lebih banyak <span class="font-weight-bold">mengeluarkan uang untie jajan kuliner</span> melalui aplikasi di smartphone.
-          </p>
-          <img class="sect-3-1-img" src="/img/section-3/computer-girl.png" alt="">
-        </div>
-        <div class="sect-3-1-wrapper">
-          <img class="sect-3-1-img" src="/img/section-3/coffee-girl.png" alt="">
-          <p class="heading-sub sect-3-1-text">
-            Waduh, kalau mengeluarkan uang terus-menerus bisa jadi kelompok pekerja bisa dikategorikan boros.
-            <br>
-            <br>
-            Secara harafiah <span class="font-weight-bold">menurut KBBI, boros adalah berlebih-lebihan dalam pemakaian uang, barang, dan sebagainya</span>. Artinya, kita cenderung <span class="font-weight-bold">overspending</span> dan mengeluarkan uang <span class="font-weight-bold">lebih banyak dari yang kita miliki</span> atau yang kita butuhkan.
-          </p>
-        </div>
-        <img class="sect-3-card" src="/img/section-3/setya-card.png" alt="" srcset="">
-      </section>
-      <section class="section-4 heading-sub">
-        <div class="section-4-content">
-          <p class="heading-sub orange-text">Kenapa Remaja Lebih Boros Saat Pandemi?</p>
-          <p class="sect-4-text">Jonathan End yang merupakan ahli keuangan, menyebutkan ada dua faktor utama yang menyebabkan remaja bisa boros saat pandemi, yaitu rasa <span class="font-weight-bold">bosan</span> dan <span class="font-weight-bold">media sosial</span>.</p>
-          <img class="sect-3-card" src="/img/section-4/card-1@2x.png" alt="" srcset="">
-        <img src="/img/section-4/center-img@2x.png" alt="" class="sect-4-center-img-mobile">
-          <p class="sect-4-text">
-            Sama halnya dengan Jonathan End, psikolong <span class="font-weight-bold">Sarah F Fathoni, M.Psi</span> juga menyebutkan kalau <span class="font-weight-bold">FOMO</span> atau Fear of Missing Out jadi penyebab remaja lebih boros selama pandemi dari sisi psikologis.
-          </p>
-          <img class="sect-3-card" src="/img/section-4/card-2@2x.png" alt="" srcset="">
-          <p class="sect-4-text">Meski sikap boros selama pandemi COVID-19 <span class="font-weight-bold">bisa dipahami, </span> namun ini bukanlah sebuah kebiasaan yang baik!</p>
-          <p class="sect-4-text">Ada jangka pendek dan panjang jika kita terus menerus boros, termasuk <span class="font-weight-bold">membentuk kebiasaan finansial yang buruk.</span></p>
-        </div>
-        <img src="/img/section-4/center-img@2x.png" alt="" class="sect-4-center-img-desktop">
-      </section>
-      <section class="section-5">
-        <p class="heading-sub orange-text">Boros Terus Menerus?</p>
-        <div class="sect-5-content-wrapper">
-          <div class="sect-5-content">
-            <img class="sect-5-img-main" src="/img/section-5/left-img@2x.png" alt="" srcset="">
-          <img class="sect-5-img-sub-mobile" src="/img/section-5/center-img@2x.png" alt="" srcset="">
-
-            <img class="sect-5-img-main" src="/img/section-5/right-img@2x.png" alt="" srcset="">
-          </div>
-          <img class="sect-5-img-sub-desktop" src="/img/section-5/center-img@2x.png" alt="" srcset="">
-        </div>
-      </section>
     </header>
+    <section class="section-2">
+      <div class="section-2-1">
+        <h2 class="orange-text heading-secondary">Pandemi oh Pandemi</h2>
+        <div class="section-2-1-wrapper">
+          <img src="/img/section-2/cloud@2x.png" alt="" class="cloud-md" />
+          <div class="section-2-1-text-box">
+            <p>
+              Enggak terasa sudah satu tahun kita berada di fase asing dengan
+              semua kebiasaan baru ya, girls.
+            </p>
+            <p>
+              Banyak lini kehidupan yang terdampak pandemi COVID-19; termasuk
+              remaja seperti kita juga rentan terkena dampak nyata pandemi, lho.
+              Kok bisa?
+            </p>
+            <div class="cloud-mobile-box">
+              <img
+                src="/img/section-2/cloud@2x.png"
+                alt=""
+                class="cloud-mobile"
+              />
+              <img
+                src="/img/section-2/cloud@2x.png"
+                alt=""
+                class="img-flipped cloud-mobile"
+              />
+            </div>
+            <p>
+              Berdasarkan data dari UNICEF Indonesia, 57% anak menghadapi
+              masalah ekonomi karena pekerjaan orang tua mereka yang terdampak
+              pandemi.
+            </p>
+            <p>
+              Hal ini diperkuat dengan survei CewekBanget.ID pada 1406 responden
+              dari Sumatera Utara hingga Nusa Tenggara Timur.
+            </p>
+          </div>
+          <img
+            src="/img/section-2/cloud@2x.png"
+            alt=""
+            class="img-flipped cloud-right cloud-md"
+          />
+        </div>
+      </div>
+      <div class="section-2-2">
+        <img class="map-img" src="/img/section-2/Map_Indonesia@2x.png" alt="" />
+      </div>
+      <div class="section-2-3">
+        <h2 class="orange-text heading-secondary">Dari Total 1046 Responden</h2>
+        <img src="/img/section-2/BAR_1@2x.png" alt="" class="bar-img" />
+        <img src="/img/section-2/BAR_2@2x.png" alt="" class="bar-img" />
+        <p class="orange-text heading-sub">
+          Kondisi di atas relate banget dengan kita ya, girls
+        </p>
+      </div>
+      <div class="section-2-4">
+        <img
+          class="chart-img"
+          src="/img/section-2/chart-desktop@2x.png"
+          alt=""
+        />
+        <img
+          class="chart-img-mobile"
+          src="/img/section-2/chart-mobile@2x.png"
+          alt=""
+        />
+      </div>
+    </section>
+    <section class="section-3">
+      <div class="sect-3-1-wrapper">
+        <p class="heading-sub sect-3-1-text">
+          Sayangnya
+          <span class="font-weight-bold">penurunan pendapatan</span> di kelompok
+          tersebut
+          <span class="font-weight-bold"
+            >tidak dibarengi dengan pengeluaran yang juga menurun</span
+          >. Kelompok ini justru
+          <span class="font-weight-bold">lebih boros</span> setelah pandemi
+          <span class="font-weight-bold">karena tanggungan</span> yang lebih
+          banyak.
+          <br />
+          <br />
+          Belum lagi <span class="font-weight-bold">melepas penat</span> saat
+          work from home, kelompok
+          <span class="font-weight-bold">pekerja</span> lebih banyak
+          <span class="font-weight-bold"
+            >mengeluarkan uang untie jajan kuliner</span
+          >
+          melalui aplikasi di smartphone.
+        </p>
+        <img
+          class="sect-3-1-img"
+          src="/img/section-3/computer-girl.png"
+          alt=""
+        />
+      </div>
+      <div class="sect-3-1-wrapper">
+        <img class="sect-3-1-img" src="/img/section-3/coffee-girl.png" alt="" />
+        <p class="heading-sub sect-3-1-text">
+          Waduh, kalau mengeluarkan uang terus-menerus bisa jadi kelompok
+          pekerja bisa dikategorikan boros.
+          <br />
+          <br />
+          Secara harafiah
+          <span class="font-weight-bold"
+            >menurut KBBI, boros adalah berlebih-lebihan dalam pemakaian uang,
+            barang, dan sebagainya</span
+          >. Artinya, kita cenderung
+          <span class="font-weight-bold">overspending</span> dan mengeluarkan
+          uang
+          <span class="font-weight-bold"
+            >lebih banyak dari yang kita miliki</span
+          >
+          atau yang kita butuhkan.
+        </p>
+      </div>
+      <img
+        class="sect-3-card"
+        src="/img/section-3/setya-card.png"
+        alt=""
+        srcset=""
+      />
+    </section>
+    <section class="section-4 heading-sub">
+      <div class="section-4-content">
+        <p class="heading-sub orange-text">
+          Kenapa Remaja Lebih Boros Saat Pandemi?
+        </p>
+        <p class="sect-4-text">
+          Jonathan End yang merupakan ahli keuangan, menyebutkan ada dua faktor
+          utama yang menyebabkan remaja bisa boros saat pandemi, yaitu rasa
+          <span class="font-weight-bold">bosan</span> dan
+          <span class="font-weight-bold">media sosial</span>.
+        </p>
+        <img
+          class="sect-3-card"
+          src="/img/section-4/card-1@2x.png"
+          alt=""
+          srcset=""
+        />
+        <img
+          src="/img/section-4/center-img@2x.png"
+          alt=""
+          class="sect-4-center-img-mobile"
+        />
+        <p class="sect-4-text">
+          Sama halnya dengan Jonathan End, psikolong
+          <span class="font-weight-bold">Sarah F Fathoni, M.Psi</span> juga
+          menyebutkan kalau <span class="font-weight-bold">FOMO</span> atau Fear
+          of Missing Out jadi penyebab remaja lebih boros selama pandemi dari
+          sisi psikologis.
+        </p>
+        <img
+          class="sect-3-card"
+          src="/img/section-4/card-2@2x.png"
+          alt=""
+          srcset=""
+        />
+        <p class="sect-4-text">
+          Meski sikap boros selama pandemi COVID-19
+          <span class="font-weight-bold">bisa dipahami, </span> namun ini
+          bukanlah sebuah kebiasaan yang baik!
+        </p>
+        <p class="sect-4-text">
+          Ada jangka pendek dan panjang jika kita terus menerus boros, termasuk
+          <span class="font-weight-bold"
+            >membentuk kebiasaan finansial yang buruk.</span
+          >
+        </p>
+      </div>
+      <img
+        src="/img/section-4/center-img@2x.png"
+        alt=""
+        class="sect-4-center-img-desktop"
+      />
+    </section>
+    <section class="section-5">
+      <p class="heading-sub orange-text">Boros Terus Menerus?</p>
+      <div class="sect-5-content-wrapper">
+        <div class="sect-5-content">
+          <img
+            class="sect-5-img-main"
+            src="/img/section-5/left-img@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="sect-5-img-sub-mobile"
+            src="/img/section-5/center-img@2x.png"
+            alt=""
+            srcset=""
+          />
+
+          <img
+            class="sect-5-img-main"
+            src="/img/section-5/right-img@2x.png"
+            alt=""
+            srcset=""
+          />
+        </div>
+        <img
+          class="sect-5-img-sub-desktop"
+          src="/img/section-5/center-img@2x.png"
+          alt=""
+          srcset=""
+        />
+      </div>
+    </section>
+    <section class="section-6 heading-sub">
+      <div class="sect-6-content">
+        <div class="sect-6-content-card-container">
+          <p class="sect-6-text text-justify">
+            Kita mungkin berpikir kalau <span class="font-weight-bold">menambah pemasukan</span> jadi <span class="font-weight-bold">solusi tepat</span> saat boros dan banyak pengeluaran. <span class="font-weight-bold">Faktanya:</span>  
+          </p>
+          <img class="sect-6-card" src="/img/section-6/first-card@2x.png" alt="" srcset="">
+        </div>
+        <img class="sect-6-side-img" src="/img/section-6/first-img.png" alt="">
+      </div>
+      <div class="sect-6-content">
+        <img class="sect-6-side-img" src="/img/section-6/second-img.png" alt="">
+        <div class="sect-6-content-card-container">
+          <p class="sect-6-text text-justify">
+            Menurut Jonathan End, penting juga untuk menggabungkan keduanya. <span class="font-weight-bold">Sarah F Fathoni, M. Psi juga menjelaskan:</span>
+          </p>
+          <img class="sect-6-card" src="/img/section-6/second-card@2x.png" alt="" srcset="">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
