section 6 title was added

--- a/index.html
+++ b/index.html
@@ -258,7 +258,10 @@
         />
       </div>
     </section>
-    <section class="section-6 heading-sub">
+    <section class="section-6 heading-sub text-center">
+      <p class="heading-sub orange-text">
+        Kenapa Remaja Lebih Boros Saat Pandemi?
+      </p>
       <div class="sect-6-content">
         <div class="sect-6-content-card-container">
           <p class="sect-6-text text-justify">
