section 2 was added

--- a/index.html
+++ b/index.html
@@ -265,19 +265,72 @@
       <div class="sect-6-content">
         <div class="sect-6-content-card-container">
           <p class="sect-6-text text-justify">
-            Kita mungkin berpikir kalau <span class="font-weight-bold">menambah pemasukan</span> jadi <span class="font-weight-bold">solusi tepat</span> saat boros dan banyak pengeluaran. <span class="font-weight-bold">Faktanya:</span>  
+            Kita mungkin berpikir kalau
+            <span class="font-weight-bold">menambah pemasukan</span> jadi
+            <span class="font-weight-bold">solusi tepat</span> saat boros dan
+            banyak pengeluaran. <span class="font-weight-bold">Faktanya:</span>
           </p>
-          <img class="sect-6-card" src="/img/section-6/first-card@2x.png" alt="" srcset="">
+          <img
+            class="sect-6-card"
+            src="/img/section-6/first-card@2x.png"
+            alt=""
+            srcset=""
+          />
         </div>
-        <img class="sect-6-side-img" src="/img/section-6/first-img.png" alt="">
+        <img
+          class="sect-6-side-img"
+          src="/img/section-6/first-img.png"
+          alt=""
+        />
       </div>
       <div class="sect-6-content">
-        <img class="sect-6-side-img" src="/img/section-6/second-img.png" alt="">
+        <img
+          class="sect-6-side-img"
+          src="/img/section-6/second-img.png"
+          alt=""
+        />
         <div class="sect-6-content-card-container">
           <p class="sect-6-text text-justify">
-            Menurut Jonathan End, penting juga untuk menggabungkan keduanya. <span class="font-weight-bold">Sarah F Fathoni, M. Psi juga menjelaskan:</span>
+            Menurut Jonathan End, penting juga untuk menggabungkan keduanya.
+            <span class="font-weight-bold"
+              >Sarah F Fathoni, M. Psi juga menjelaskan:</span
+            >
           </p>
-          <img class="sect-6-card" src="/img/section-6/second-card@2x.png" alt="" srcset="">
+          <img
+            class="sect-6-card"
+            src="/img/section-6/second-card@2x.png"
+            alt=""
+            srcset=""
+          />
+        </div>
+      </div>
+    </section>
+    <section class="section-7 text-center heading-sub">
+      <p class="heading-sub orange-text">Cara Mengatur Keuangan</p>
+      <div class="sect-7-content">
+        <p class="sect-6-text text-justify">
+          Psikolog Sarah F Fathoni, M. Psi menjelaskan ada tabel manajemen
+          finansial yang bisa dibuat dengan updating. <br />
+          <br />Dalam satu minggu harus dipetakan berapa uang yang dimiliki dan
+          kebutuhan apa yang harus dibeli. Sisanya untuk menabung.
+        </p>
+        <img src="/img/section-7/cart-img@2x.png" alt="" srcset="" />
+      </div>
+      <div class="sect-7-content">
+        <div class="sect-7-wrapper">
+          <img
+            class="sect-7-percentage-img"
+            src="/img/section-7/percentage-img@2x.png"
+            alt=""
+            srcset=""
+          />
+          <img
+            class="sect-7-card-jo-img"
+            src="/img/section-7/card-jonathan@2x.png"
+            alt=""
+            srcset=""
+          />
+
         </div>
       </div>
     </section>
