section 2 was made responsive

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <br />Dalam satu minggu harus dipetakan berapa uang yang dimiliki dan
           kebutuhan apa yang harus dibeli. Sisanya untuk menabung.
         </p>
-        <img src="/img/section-7/cart-img@2x.png" alt="" srcset="" />
+        <img class="sect-7-img" src="/img/section-7/cart-img@2x.png" alt="" srcset="" />
       </div>
       <div class="sect-7-content">
         <div class="sect-7-wrapper">
