section 3 was added

--- a/index.html
+++ b/index.html
@@ -330,8 +330,16 @@
             alt=""
             srcset=""
           />
-
         </div>
+      </div>
+      <div class="sect-7-content">
+        <p class="sect-6-text text-justify">
+          Sedangkan menurut <span class="font-weight-bold orange-text">Ratna Juwita Hasibuan, Business Development for Millennials dari Allianz Indonesia,</span> cara mengatur keuangan yang baik ialah <span class="font-weight-bold orange-text">remaja harus memiliki catatan keuangan.</span>
+          <br />
+          <br />
+          Fungsi <span class="font-weight-bold pink-text">catatan keuangan</span> ini ialah <span class="font-weight-bold pink-text">memantau arus kas keuangan agar lebih fokus dalam mencapai tujuan,</span> mempersiapkan dana darurat, dan membuat kita lebih <span class="font-weight-bold pink-text">disiplin untuk menabung.</span>
+        </p>
+        <img class="sect-7-img" src="/img/section-7/coin-bank@2x.png" alt="" srcset="" />
       </div>
     </section>
   </body>
