section 4 was added

--- a/index.html
+++ b/index.html
@@ -314,7 +314,12 @@
           <br />Dalam satu minggu harus dipetakan berapa uang yang dimiliki dan
           kebutuhan apa yang harus dibeli. Sisanya untuk menabung.
         </p>
-        <img class="sect-7-img" src="/img/section-7/cart-img@2x.png" alt="" srcset="" />
+        <img
+          class="sect-7-img"
+          src="/img/section-7/cart-img@2x.png"
+          alt=""
+          srcset=""
+        />
       </div>
       <div class="sect-7-content">
         <div class="sect-7-wrapper">
@@ -325,7 +330,7 @@
             srcset=""
           />
           <img
-            class="sect-7-card-jo-img"
+            class="sect-7-card-img"
             src="/img/section-7/card-jonathan@2x.png"
             alt=""
             srcset=""
@@ -334,12 +339,62 @@
       </div>
       <div class="sect-7-content">
         <p class="sect-6-text text-justify">
-          Sedangkan menurut <span class="font-weight-bold orange-text">Ratna Juwita Hasibuan, Business Development for Millennials dari Allianz Indonesia,</span> cara mengatur keuangan yang baik ialah <span class="font-weight-bold orange-text">remaja harus memiliki catatan keuangan.</span>
+          Sedangkan menurut
+          <span class="font-weight-bold orange-text"
+            >Ratna Juwita Hasibuan, Business Development for Millennials dari
+            Allianz Indonesia,</span
+          >
+          cara mengatur keuangan yang baik ialah
+          <span class="font-weight-bold orange-text"
+            >remaja harus memiliki catatan keuangan.</span
+          >
           <br />
           <br />
-          Fungsi <span class="font-weight-bold pink-text">catatan keuangan</span> ini ialah <span class="font-weight-bold pink-text">memantau arus kas keuangan agar lebih fokus dalam mencapai tujuan,</span> mempersiapkan dana darurat, dan membuat kita lebih <span class="font-weight-bold pink-text">disiplin untuk menabung.</span>
+          Fungsi
+          <span class="font-weight-bold pink-text">catatan keuangan</span> ini
+          ialah
+          <span class="font-weight-bold pink-text"
+            >memantau arus kas keuangan agar lebih fokus dalam mencapai
+            tujuan,</span
+          >
+          mempersiapkan dana darurat, dan membuat kita lebih
+          <span class="font-weight-bold pink-text"
+            >disiplin untuk menabung.</span
+          >
         </p>
-        <img class="sect-7-img" src="/img/section-7/coin-bank@2x.png" alt="" srcset="" />
+        <img
+          class="sect-7-img"
+          src="/img/section-7/coin-bank@2x.png"
+          alt=""
+          srcset=""
+        />
+      </div>
+      <div class="sect-7-content">
+        <img
+          class="sect-7-card-img order-sm-2"
+          src="/img/section-7/card-ratna@2x.png"
+          alt=""
+          srcset=""
+        />
+        <img
+          src="/img/section-7/diagram-pie@2x.png"
+          alt=""
+          class="sect-7-pie-img order-sm-1"
+        />
+      </div>
+      <div class="sect-7-content">
+        <p class="sect-6-text text-justify">
+          Mengatur keuangan dengan baik bisa mengantarkan kita untuk membuka bisnis. Apalagi  berdasarkan <span class="font-weight-bold pink-text">survei CewekBanget.ID</span>, <span class="font-weight-bold pink-text">633 remaja</span> ada yang sangat antusias untuk coba membuka bisnis di masa pandemi COVID-19.
+          <br />
+          <br />
+          Alasan mereka tertarik coba bisnis karena mau belajar soal bisnis dan enggak ingin menyusahkan orang tua lagi. Remaja yang sangat tertarik dengan untuk membuka bisnis ini sejalan dengan tema <span class="font-weight-bold orange-text">Global Money Week 2021</span> yakni <span class="font-weight-bold orange-text text-italic">Take care of yourself, take care of your money.</span>
+        </p>
+        <img
+          class="sect-7-img"
+          src="/img/section-7/bake-img@2x.png"
+          alt=""
+          srcset=""
+        />
       </div>
     </section>
   </body>
